# micro-blog

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.debug.yml  docker-compose.infra.yml  docker-compose.yml  kind-cluster.yaml  package-lock.json  package.json  skaffold.yaml
.github/workflows/: ci.yml
crates/gateway/: Cargo.toml  Dockerfile
crates/gateway/src/: config.rs  lib.rs  main.rs
crates/gateway/src/middleware/: auth.rs  rate_limit.rs
crates/gateway/src/routes/: health.rs  proxy.rs
crates/gateway/tests/: auth_integration.rs
crates/media/: Cargo.toml  Dockerfile
crates/media/src/: config.rs  db.rs  handlers.rs  main.rs  storage.rs
crates/search/: Cargo.toml  Dockerfile
crates/search/src/: config.rs  handlers.rs  index.rs  main.rs  subscriber.rs
crates/shared/: Cargo.toml
crates/shared/src/: events.rs  health.rs  jwt.rs  lib.rs  nats_subjects.rs
k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  secrets.yaml  service-accounts.yaml
k8s/base/auth/: deployment.yaml
k8s/base/captcha/: deployment.yaml
k8s/base/comment/: deployment.yaml
k8s/base/frontend/: deployment.yaml
k8s/base/gateway/: deployment.yaml
k8s/base/istio/: authorization-policies.yaml  destination-rules.yaml  envoy-filter-body-limit.yaml  envoy-filter-header-strip.yaml  envoy-filter-rate-limit.yaml  gateway.yaml  istio-operator-kind.yaml  istio-operator-production.yaml  peer-authentication.yaml  request-authentication.yaml  virtual-service.yaml
k8s/base/media/: deployment.yaml
k8s/base/nats/: deployment.yaml
k8s/base/notification/: deployment.yaml
k8s/base/post/: deployment.yaml
k8s/base/postgres/: statefulset.yaml
k8s/base/search/: deployment.yaml
k8s/base/user/: deployment.yaml
k8s/base/vault/: dynamic-secrets.yaml  nats-secrets.yaml  static-secrets.yaml  vault-auth.yaml  vault-connection.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/production/: istio-cors-patch.yaml  istio-gateway-tls.yaml  (+4 more)
scripts/: configure-vault.sh  generate-nats-nkeys.sh  init-databases.sql  install-istio.sh  install-vault.sh  kind-setup.sh  kind-teardown.sh  migrate-all.sh
services/auth/: Dockerfile  package.json
services/captcha/: Dockerfile  package.json
services/comment/: Dockerfile  drizzle.config.ts  package.json
services/frontend/: Dockerfile  index.html  package.json  tsconfig.node.json  vite.config.ts
services/notification/: Dockerfile  drizzle.config.ts  package.json
services/post/: Dockerfile  drizzle.config.ts  package.json
services/shared/: package.json
services/user/: Dockerfile  drizzle.config.ts  package.json
(+141 files in other folders)
