[package]
name = "blog-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
blog-shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
hyper = { version = "1", features = ["full"] }
governor = "0.8"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
chrono = { workspace = true }
